--- a/main.css
+++ b/main.css
@@ -1,27 +1,11 @@
-html, body {
+body {
     margin: 0px;
-    line-height: 20px;
 }
-
-@font-face {
-    font-family: inter;
-    src: url(Inter-Regular.ttf)
-  }
-
-@font-face {
-    font-family: interLight
-    src: url(Inter-Light.ttf)
-}
-
-/* https://www.w3schools.com/css/css3_fonts.asp */
-
-
-  
 
 .container {
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
-    grid-template-rows: 5rem 1fr 7rem;
+    grid-template-rows: 4rem 1fr 15rem;
     grid-template-areas:
     "header header header" 
     ". content ."
@@ -30,55 +14,108 @@ html, body {
 }
 
 .header {
-    display: grid;
     grid-area: header;
     background-color: #96A990;
-    grid-template-columns: 1fr 2fr 2fr 2fr;
-    grid-template-rows: 1fr;
-    grid-template-areas:
-    "header1 header2 header3 header4";
-    flex: content;
-    align-content: center;
-    justify-content: center;
+    font-size: 0.7rem;
+    color: rgb(255, 255, 255);
+    display: grid;
+    grid-template-columns: 1fr 6fr 2fr;
+    column-gap: 10px;
+    align-items: center;
+}
+/*cssgrid-generator.netlify.app used to found our grid*/
+
+/* .category {
+    justify-self: left;
+    font-family: Inter;
+    padding: 10%;
+    grid-auto-flow: column;
+
+} */
+
+body {
+    font-family: Inter;
+}
+
+.category {
+    grid-area: 1 / 2 / 2 / 3;
+    font-size: 0.7rem;
+    justify-content: left;
+    padding-right: 5%;
+    padding-left: 5%;
+}
+
+.woman {
+    padding-right: 6%;
+}
+
+.man {
+    padding-right: 6%;
+}
+
+.new-in {
+    padding-right: 6%;
+}
+
+.outlet {
+    padding-right: 6%;
+}
+
+.asp {
+    grid-area: 1 / 1 / 2 / 2;
+    padding: 10%;
+   
+}
+
+.account {
+    grid-area: 1 / 3 / 2 / 4;
+    justify-items: right;
+}
+.search_icon {
+    padding-right: 10%;
+}
+
+.bag_icon {
+    padding-left: 10%;
+}
+/*fixa mellanrum och justify right*/
 
 
+
+
+
+
+
+
+
+h3 {
+    font-size: medium;
+    font-weight: 600;
+    padding-top: 10%;
 }
 
 .content {
+    background-color: cornflowerblue;
     display: grid;
     grid-area: content;
-    background-color:beige;
-    font-family: inter;
 }
 
 .footer {
+    background-color:  #96A990;
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
     grid-area: footer;
-    background-color: rgba(150, 169, 144, 0.5);
+    line-height: 2rem;
+    font-size: 0.7rem;
+    padding-left: 10%;
+    padding-bottom: 5%;
+
 }
 
+/* @import url('https://fonts.googleapis.com/css?family=Inter&display=swap'); */
 
-.logo {
-    background-color: blue;
-    grid-area: header1;
-    max-width: 100px;
-
-    position: absolute;
-    left: 3%;
-    right: 90%;
-    top: 2%;
-    bottom: 97%;
-} 
-
-.cathegory {
-    background-color: aqua;
-    display: grid;
-    grid-area: header2;
-    font-size: 0.7em;
-    color: black;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 400;
-    padding: 9%;
-    display: flex;
-    justify-content:space-between;
+@font-face {
+    font-family: Inter;
+    src: url(assets/Inter-Regular.ttf) format('truetype');
 }
+/* https://www.w3schools.com/css/css3_fonts.asp */
