--- a/main.css
+++ b/main.css
@@ -1,14 +1,16 @@
 body {
     margin: 0px;
+    /* background-image: url(images/unsplash-background.jpg);
+    background-size: 100vw, 80vh; */
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
-    grid-template-rows: 4rem 1fr 15rem;
+    grid-template-rows: 6rem 1fr 15rem;
     grid-template-areas:
     "header header header" 
-    ". content ."
+    "content content content"
     "footer footer footer";
     min-height: 100vh;
 }
@@ -16,7 +18,7 @@ body {
 .header {
     grid-area: header;
     background-color: #96A990;
-    font-size: 0.7rem;
+    font-size: 1rem;
     color: rgb(255, 255, 255);
     display: grid;
     grid-template-columns: 1fr 6fr 2fr;
@@ -39,7 +41,7 @@ body {
 
 .category {
     grid-area: 1 / 2 / 2 / 3;
-    font-size: 0.7rem;
+    font-size: 1rem;
     justify-content: left;
     padding-right: 5%;
     padding-left: 5%;
@@ -82,11 +84,45 @@ body {
 
 
 
+.front_pic {
+    width: 100%;
+}
 
+.front_text_1 {
+    justify-content: center;
+    align-items: center;
+    font-weight: 100;
+    font-size: 4rem;
+    margin-top: 32%;
+    text-align: left;
+}
 
+.front_text_2 {
+    justify-content: center;
+    align-items: center;
+    font-weight: 100;
+    font-size: 4rem;
+    margin-top: 37%;
+    text-align: right;
+}
 
+.content_first_page{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 
+    margin: 15%;
+    text-align: center;
+    row-gap: 200px;
+    
+    
+    
+}
 
+.front_img2 {
+    display: flex;
+    margin-left: 15%;
+    
+}
 
 h3 {
     font-size: medium;
@@ -95,7 +131,9 @@ h3 {
 }
 
 .content {
-    background-color: cornflowerblue;
+    display: grid;
+    grid-template-columns: repeat();
+    /* background-color: cornflowerblue; */
     display: grid;
     grid-area: content;
 }
@@ -108,7 +146,7 @@ h3 {
     line-height: 2rem;
     font-size: 0.7rem;
     padding-left: 10%;
-    padding-bottom: 5%;
+    padding-bottom: 14%;
 
 }
 
