--- a/main.css
+++ b/main.css
@@ -132,7 +132,6 @@ h3 {
 
 .content {
     display: grid;
-    grid-template-columns: repeat();
     /* background-color: cornflowerblue; */
     display: grid;
     grid-area: content;
@@ -157,3 +156,37 @@ h3 {
     src: url(assets/Inter-Regular.ttf) format('truetype');
 }
 /* https://www.w3schools.com/css/css3_fonts.asp */
+
+
+
+
+
+
+
+/* PRODUCT PAGE! */
+
+
+
+
+
+
+.content_productpage {
+    display: grid;
+    grid-area: content;
+    grid-template-columns: repeat(3, 1fr);
+    
+    column-gap: 5%;
+    background-color: antiquewhite;
+    margin: 8%;
+    justify-items: center;
+    align-content: center;
+}
+
+.product_image {
+    width: 100%;
+    max-height: 100%
+}
+
+.product_text {
+    padding-bottom: 40%;
+}
