--- a/main.css
+++ b/main.css
@@ -19,13 +19,93 @@ body {
 .header {
     grid-area: header;
     background-color: #96A990;
-    font-size: 1rem;
+    font-size: 16px;
     color: rgb(255, 255, 255);
     display: grid;
     grid-template-columns: 1fr 6fr 2fr;
     column-gap: 10px;
     align-items: center;
 }
+
+
+/* DROPDOWN MENU */
+
+.navbar {
+    overflow: hidden;
+}
+
+.navbar a {
+    float: left;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropbtn:hover {
+    text-decoration: underline orange;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    width: 60%;
+    min-height: auto;
+    z-index: 1;
+}
+
+.dropdown-content:hover {
+    position: absolute;
+    background-color: white;
+    width: 60%;
+    min-height: auto;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    text-decoration: underline orange;
+}
+
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.navbar a:hover {
+    text-decoration: underline orange;
+}
+/* https://www.w3schools.com/howto/howto_css_dropdown_navbar.asp
+Used to create the dropdown menu for the woman button */
+
+
+
+
 
 .footer {
     background-color:  #96A990;
@@ -243,8 +323,7 @@ button {
 
 
 
-/* --------------------- PRODUCT PAGE!-------------------- */
-
+/* --------------------- ITEM PAGE!-------------------- */
 
 
 
@@ -252,7 +331,52 @@ button {
 
 
 .content_itempage {
-    grid-area: content;
-    background-color: beige;
-    margin: 8%;
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr;
+    grid-template-rows: 1fr 4fr 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    grid-template-areas: 
+    "bread bread bread"
+    "block1 block1 block1"
+    "block2 block2 block2"
+    "block3 block3 block3";
+
+}
+
+.item1 {
+    display: grid;
+    grid-area: block1;
+    max-width: 80%;
+    height: auto;
+
+}
+
+.item2 {
+    display: grid;
+    grid-area: block1;
+    margin-top: 150%;
+    max-width: 80%;
+    height: auto;
+}
+
+.item3 {
+    display: grid;
+    grid-area: block1;
+    margin-top: 300%;
+    max-width: 80%;
+    height: auto;
+    
+}
+
+.middlepicture {
+
+    grid-area: block1;
+    margin-left: 150%;
+    max-width: 100%;
+    height: auto;
+}
+
+.breadcrums2 {
+    grid-area: bread;
 }
