--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ span {
     grid-template-areas:
     "header header header" 
     "content content content"
-    "footer footer footer";
+    "footer";
     min-height: 100vh;
 }
 
@@ -44,12 +44,9 @@ span {
 .footer {
     background-color:  #96A990;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-area: footer;
-    line-height: 2rem;
-    font-size: 0.7rem;
-    padding-left: 10%;
-    padding-bottom: 14%;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 20px;
+    gap: 20px;
 }
 
 /*cssgrid-generator.netlify.app used to found our grid*/
@@ -256,7 +253,7 @@ h3 {
 .content_productpage {
     display: grid;
     grid-area: block3;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
     column-gap: 5%;
     margin: 8%;
     margin-top: 0px;
@@ -291,13 +288,12 @@ h3 {
 .container_item_page {
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
-    grid-template-rows: 6rem 4rem 5fr 4fr 15rem;
+    grid-template-rows: 6rem 4rem 5fr 4fr;
     grid-template-areas:
     "header header header" 
     "block1 block1 block1"
     "block2 block2 block2"
-    "block3 block3 block3"
-    "footer footer footer";
+    "block3 block3 block3";
     min-height: 100vh;
 }
 
@@ -333,7 +329,7 @@ h3 {
 
 .item_small {
     background-color: rgb(72, 121, 164);
-    max-height: 90vh;
+    max-height: 65vh;
 }
 
 .small_imgs {
@@ -346,13 +342,15 @@ h3 {
     max-width: 100%;
     min-width: 50%;
     height: auto;
-    max-height: 90vh;
 }
 
 .item_description {
-    display: grid;
+    /* display: grid;
     grid-template-rows: 2fr 1fr 1fr 1fr 1fr 1fr 6fr;
-    max-height: 90vh;
+    max-height: 90vh; */
+    display: flex;
+    flex-direction: column;
+    padding: 0 10%;
 }
 
 .colour_button {
@@ -445,12 +443,46 @@ h3 {
 
 .style_with_img {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     column-gap: 5%;
     margin: 8%;
     margin-top: 0px;
     justify-items: center;
     align-content: center;
+}
+
+@media (max-width:700px) {
+    /* .block2_item_page {
+        grid-area: block2;
+        display: grid;
+        grid-template-columns: 1fr;
+        column-gap: 3rem;
+        margin: 5%;
+        max-height: 100%;
+    }
+
+    .item_small {
+        display: none;
+    }
+
+    .style_with_img {
+        grid-template-columns: 1fr;
+    }
+    
+    .d33 {
+        display: none;
+    }
+
+    .d32 {
+        display: none;
+    }
+    .d31 {
+        display: none;
+    } */
+
+
+
 }
 
 
@@ -745,7 +777,6 @@ display: flex;
 justify-content: flex-end;
 margin-top: 10px;
 font-family: InterSemibold; 
-=======
     margin-bottom: 2rem;
     margin-top: 4rem;
 }
@@ -795,4 +826,70 @@ font-family: InterSemibold;
     display: flex;
     justify-content: center;
     margin-bottom: 3rem;
+}
+
+@media (max-width:700px) {
+    .content_bag_page {
+        display: grid;
+        grid-template-columns: 1fr;
+        max-width: 100vw;
+    }
+
+
+    .content_productpage {
+        display: grid;
+        grid-area: block3;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 5%;
+        margin: 8%;
+        margin-top: 0px;
+        justify-items: center;
+        align-content: center;
+    }
+
+
+    .block2_item_page {
+        grid-area: block2;
+        display: grid;
+        grid-template-columns: 1fr;
+        column-gap: 3rem;
+        margin: 5%;
+        max-height: 100%;
+    }
+
+    .item_small {
+        display: none;
+    }
+
+    .style_with_img {
+        grid-template-columns: 1fr;
+    }
+    
+    .d33 {
+        display: none;
+    }
+
+    .d32 {
+        display: none;
+    }
+    .d31 {
+        display: none;
+    }
+}
+
+@media (max-width:500px) {
+    .content_productpage {
+        display: grid;
+        grid-area: block3;
+        grid-template-columns: 1fr;
+        column-gap: 5%;
+        margin: 8%;
+        margin-top: 0px;
+        justify-items: center;
+        align-content: center;
+    }
+
+    .footer {
+        grid-template-columns: 1fr;
+    }
 }
