fixed area for headermiss
made media, fixed rubriker on productpage, changed icons, linked missing links and some small fixes

--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ span {
 .container {
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
-    grid-template-rows: 2rem 1fr 15rem;
+    grid-template-rows: 5rem 1fr 15rem;
     grid-template-areas:
     "header header header" 
     "content content content"
@@ -152,7 +152,11 @@ Used to create the dropdown menu for the woman button  */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 20px;
+    padding-bottom: 3%;
     gap: 20px;
+    padding-left: 5%;
+    line-height: 2rem;
+    letter-spacing: 1px;
 }
 
 /*cssgrid-generator.netlify.app used to found our grid*/
@@ -313,7 +317,7 @@ h3 {
 .container_product_page {
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
-    grid-template-rows: 3rem 15rem 1fr;
+    grid-template-rows: 25rem 15rem 1fr;
     grid-template-areas:
     "block1 block1 block1"
     "block2 block2 block2"
@@ -351,8 +355,10 @@ h3 {
     align-content:  left;
     align-items: left;
     text-align: center;
-    width: 6rem;
+    width: 8rem;
+    height: 1.5rem;
     border-style: hidden;
+    
 }
 
 .woman_rubrik {
@@ -391,7 +397,9 @@ h3 {
 /* Pictures from Gina tricot */
 
 .product_text {
+    padding-top: 2%;
     padding-bottom: 25%;
+    letter-spacing: 1px;
 }
 
 
@@ -410,13 +418,14 @@ h3 {
 .container_item_page {
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
-    grid-template-rows: 3rem 5fr 4fr;
+    grid-template-rows: 25rem 5fr 4fr;
     grid-template-areas:
     "block1 block1 block1"
     "block2 block2 block2"
     "block3 block3 block3";
     min-height: 100vh;
 }
+
 
 .block1_item_page {
     grid-area: block1;
@@ -577,10 +586,14 @@ h3 {
     min-height: 100vh;
 }
 
+/* grid-template-columns: 1fr 8fr 1fr;
+grid-template-rows: 25rem 15rem 1fr; */
+
 .content_bag_page {
     display: grid;
     grid-template-columns: 1fr 1fr;
     max-width: 100vw;
+    margin-top: 10rem;
 }
 
 .block1_bag {
@@ -714,12 +727,21 @@ h3 {
 
 /* -----------------------checkout PAGE ------------- */
 
+/* .container_bag_page {
+    display: grid;
+    grid-template-rows: 25rem 1fr;
+} */
+
+/* detta funkar på alla andra sidor????? jag la till margintop på content så funkar det verkR DET SOM */
 
 
 .content_checkout {
     display: grid;
     grid-template-columns: 1fr 1fr;
     min-height: 100vh;
+    margin-top: 10rem;
+    margin-left: 7%;
+    margin-right: 7%;
 }
 
 .block1_checkout {
@@ -864,6 +886,7 @@ line-height: 170%;
 .img_checkout_order {
 max-height: 8rem;
 display: flex;
+padding-right: 1rem;
 }
 
 .pris2{
@@ -882,8 +905,11 @@ display: flex;
 
 
 
+@media screen and (max-width:800px) {
+    .container {
+        grid-template-rows: 8rem 1fr 15rem;
+    }
 
-@media (max-width:800px) {
     .front_text_1 {
         font-size: 3rem;
     }
@@ -891,25 +917,11 @@ display: flex;
     .front_text_2 {
         font-size: 3rem;
     }
-
-@media screen and (max-width: 500px) {
-    .content_checkout{
-        display: flex;
-        flex-direction: column-reverse;
-    }
-    }
-
-@media (max-width:700px) {
-    .content_bag_page {
-        display: grid;
-        grid-template-columns: 1fr;
-        max-width: 100vw;
-    }
 }
 
 
 
-@media (max-width:700px) {
+@media screen and (max-width:700px) {
     .content_first_page{
         row-gap: 150px;  
     }
@@ -920,6 +932,11 @@ display: flex;
     
     .front_text_2 {
         font-size: 2rem;
+    }
+
+    .container_product_page {
+        grid-template-columns: 1fr 8fr 1fr;
+        grid-template-rows: 15rem 8rem 1fr;
     }
 
     .content_productpage {
@@ -961,11 +978,21 @@ display: flex;
         display: none;
     }
 
+    .content_bag_page {
+        display: grid;
+        grid-template-columns: 1fr;
+        max-width: 100vw;
+    }
+
     .content_checkout{
         display: flex;
         flex-direction: column-reverse;
     }
 
+    .footer {
+        line-height: 1.5rem;
+        font-size: 11px;
+    }
 
 
 
@@ -1053,9 +1080,14 @@ display: flex;
 
 }
 
-@media (max-width:500px) {
+@media screen and (max-width:500px) {
     .content_first_page{
         row-gap: 100px;  
+    }
+
+    .container_product_page {
+        grid-template-columns: 1fr 8fr 1fr;
+        grid-template-rows: 15rem 8rem 1fr;
     }
 
     .content_productpage {
@@ -1082,12 +1114,21 @@ display: flex;
         font-family: InterSemibold;
     }
 
+    .content_checkout{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
     .footer {
         grid-template-columns: 1fr;
     }
 }
 
 @media screen and (max-width: 400px) {
+    .container {
+        grid-template-rows: 5rem 1fr 15rem;
+    }
+
     .front_text_1 {
         font-size: 1.5rem;
     }
@@ -1121,6 +1162,4 @@ display: flex;
 
 
 
-
-/* --------------lista att göra-----------------
     
