--- a/main.css
+++ b/main.css
@@ -101,12 +101,16 @@ span {
 .column {
     float: left;
     width: 33.33%;
-    height: 520px;
+    height: 570px;
 }
 
 .column h4 {
+    font-family: InterSemibold;
+    letter-spacing: 2px;
+    font-size: 20px;
     color: black;
     padding-left: 16px;
+    padding-bottom: 30px;
 }
 
 .column a {
